--- a/RuoYi.Generator/StaticFiles/Vm/Net/Repository.cs.cshtml
+++ b/RuoYi.Generator/StaticFiles/Vm/Net/Repository.cs.cshtml
@@ -1,6 +1,6 @@
 ﻿using RuoYi.Data;
-using @(Model.PackageName).Dtos;
-using @(Model.PackageName).Entities;
+using @(Model.PackageName).Data.Dtos;
+using @(Model.PackageName).Data.Entities;
 using SqlSugar;
 
 namespace @(Model.PackageName).Repositories
