--- a/RuoYi.Generator/StaticFiles/Vm/Net/Service.cs.cshtml
+++ b/RuoYi.Generator/StaticFiles/Vm/Net/Service.cs.cshtml
@@ -4,8 +4,8 @@ using Microsoft.Extensions.Logging;
 using RuoYi.Data;
 using RuoYi.Data.Dtos;
 using RuoYi.Data.Entities;
-using @(Model.PackageName).Dtos;
-using @(Model.PackageName).Entities;
+using @(Model.PackageName).Data.Dtos;
+using @(Model.PackageName).Data.Entities;
 using @(Model.PackageName).Repositories;
 
 namespace @(Model.PackageName).Services
