--- a/RuoYi.Generator/StaticFiles/Vm/Net/SubDto.cs.cshtml
+++ b/RuoYi.Generator/StaticFiles/Vm/Net/SubDto.cs.cshtml
@@ -1,7 +1,7 @@
 ﻿using System.Collections.Generic;
 using RuoYi.Data.Dtos;
 
-namespace @(Model.Package).Data.Dtos
+namespace @(Model.PackageName).Data.Dtos
 {
     @{
         var dto = Model.Table.IsTree() ? "TreeDto" : "BaseDto";
