update swagger package & [SwaggerIgnore] for [FromForm]

--- a/RuoYi.Admin/Views/Home/Index.cshtml
+++ b/RuoYi.Admin/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     <img src="~/images/logo.png" style="height:100px;" />
     <p><h3>RuoYi.Net</h3></p>
     <p>@ViewBag.Description</p>
-    <p><a href="/swagger-ui">API 接口</a></p>
+    <p><a href="/api-doc">API 接口</a></p>
 </div>
